[package]
name = "voyager"
version = "0.2.1"
authors = ["Matthias Seitz <matthias.seitz@outlook.de>"]
edition = "2018"
description = "Web crawler and scraper"
license = "MIT OR Apache-2.0"
readme = "README.md"
homepage = "https://github.com/mattsse/voyager"
repository = "https://github.com/mattsse/voyager"
keywords = ["scraping", "crawling", "html"]
categories = ["web-programming"]

[dependencies]
html5ever = "0.25"
scraper = "0.12"
reqwest = "0.11"
futures = "0.3"
rand = "0.8"
anyhow = "1.0"
tokio = { version = "1.15", features = ["full"], optional = true }
futures-timer = "3.0"
thiserror = "1.0"
robotstxt = "0.3"

[[example]]
name = "reddit"
required-features = ["tokio"]

[[example]]
name = "hackernews"
required-features = ["tokio"]

[[example]]
name = "explore"
required-features = ["tokio"]
